# Pico_ePaper_Code

./: .gitignore
c/: .gitignore  CMakeLists.txt  GUI_Paint_Readme.md  dashboard.c  dashboard.h  main.c
c/lib/e-Paper/: CMakeLists.txt
